# git-iris

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONFIG.md  Cargo.toml  README.md  TODO.md  action.yml  git-iris.1  test_change.md
.github/workflows/: cicd.yml  docs.yml  release.yml
docker/: .dockerignore  Dockerfile  README.md  build.sh  docker-entrypoint.sh  test-image.sh
docs/: .prettierrc  MCP.md  TODO.md  agent-architecture.md  agent-framework-design.md  agent-implementation-guide.md  agent-prompts.md  changelog-release-notes-docs.md  code-review-docs.md  git-iris-architecture.md  implementation-checklist.md  index.md  package-lock.json  package.json  rig-multi-turn.md  usage-guide.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  silkcircuit.css
docs/architecture/: agent.md  capabilities.md  context.md  index.md  output.md  tools.md
docs/configuration/: environment.md  index.md  models.md  project-config.md  providers.md
docs/extending/: capabilities.md  contributing.md  index.md  modes.md  tools.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/reference/: cli.md  keybindings.md  tokens.md  troubleshooting.md
docs/studio/: chat.md  index.md  navigation.md
docs/studio-internals/: components.md  events.md  index.md  reducer.md
docs/studio/modes/: changelog.md  commit.md  explore.md  pr.md  release-notes.md  review.md
docs/themes/: creating.md  gallery.md  index.md  styles.md  tokens.md
docs/user-guide/: changelogs.md  commits.md  index.md  presets.md  pull-requests.md  release-notes.md  reviews.md
scripts/: lint.py  release.py
src/: changelog.rs  cli.rs  commands.rs  common.rs  config.rs  context.rs  git.rs  gitmoji.rs  instruction_presets.rs  lib.rs  llm.rs  logger.rs  main.rs  messages.rs  output.rs  providers.rs  token_optimizer.rs  ui.rs
src/agents/: changelog.rs  commit.rs  context.rs  core.rs  debug.rs  debug_tool.rs  executor.rs  factory.rs  integration.rs  iris.rs  mod.rs  output_validator.rs  prompts.rs  registry.rs  review.rs  setup.rs  status.rs  status_messages.rs  tools.rs
src/agents/capabilities/: changelog.toml  chat.toml  commit.toml  pr.toml  release_notes.toml  review.toml  semantic_blame.toml
src/agents/services/: llm.rs  mod.rs  orchestrator.rs  parser.rs
src/agents/specialized/: changelog.rs  commit.rs  mod.rs  pr.rs  review.rs
src/agents/tools/: code_search.rs  common.rs  content_update.rs  docs.rs  file_analyzer.rs  file_read.rs  git.rs  knowledge.rs  mod.rs  parallel_analyze.rs  project_metadata.rs  registry.rs  workspace.rs  workspace_new.rs
src/agents/workflows/: changelog.rs  commit.rs  mod.rs  release_notes.rs  review.rs
src/changes/: change_analyzer.rs  changelog.rs  cli.rs  common.rs  mod.rs  models.rs  prompt.rs  readme_reader.rs  releasenotes.rs
src/commit/: cli.rs  mod.rs  prompt.rs  relevance.rs  review.rs  service.rs  types.rs
src/companion/: branch_memory.rs  mod.rs  session.rs  storage.rs  watcher.rs
src/file_analyzers/: c.rs  cpp.rs  gradle.rs  java.rs  javascript.rs  json.rs  kotlin.rs  markdown.rs  mod.rs  python.rs  rust.rs  text.rs  toml.rs  yaml.rs
src/git/: commit.rs  files.rs  metadata.rs  mod.rs  repository.rs  utils.rs
src/llm_providers/: claude.rs  gemini.rs  mod.rs  openai.rs  test.rs
src/mcp/: config.rs  mod.rs  server.rs  tests.rs
src/mcp/tools/: changelog.rs  codereview.rs  commit.rs  mod.rs  pr.rs  releasenotes.rs  utils.rs
src/services/: git_commit.rs  mod.rs
src/studio/: app.rs  events.rs  history.rs  layout.rs  mod.rs  reducer.rs  state.rs  theme.rs  utils.rs
src/studio/app/: agent_tasks.rs  mod.rs
src/studio/components/: code_view.rs  diff_view.rs  file_tree.rs  message_editor.rs  mod.rs  syntax.rs
src/studio/handlers/: changelog.rs  commit.rs  explore.rs  mod.rs  modal.rs  pr.rs  release_notes.rs  review.rs
src/studio/handlers/modals/: chat.rs  commit_count.rs  confirm.rs  emoji_selector.rs  instructions.rs  mod.rs  preset_selector.rs  ref_selector.rs  search.rs  settings.rs  theme_selector.rs
src/studio/modals/: mod.rs
src/studio/modes/: mod.rs
src/studio/reducer/: agent.rs  content.rs  git.rs  mod.rs  modal.rs  navigation.rs  settings.rs  ui.rs
src/studio/render/: changelog.rs  chat.rs  commit.rs  explore.rs  mod.rs  modals.rs  pr.rs  release_notes.rs  review.rs
src/studio/render/modals/: chat_modal.rs  commit_count.rs  confirm.rs  emoji_selector.rs  help.rs  instructions.rs  mod.rs  preset_selector.rs  ref_selector.rs  search.rs  settings.rs  theme_selector.rs
src/studio/state/: chat.rs  mod.rs  modes.rs
src/studio/tests/: history_tests.rs  mod.rs  reducer_tests.rs
src/theme/: color.rs  error.rs  gradient.rs  loader.rs  mod.rs  resolver.rs  schema.rs  style.rs
src/theme/adapters/: cli.rs  mod.rs  ratatui.rs
src/theme/builtins/: catppuccin_latte.toml  catppuccin_mocha.toml  dracula.toml  gruvbox_dark.toml  mod.rs  nord.toml  one_dark.toml  silkcircuit_dawn.toml  silkcircuit_glow.toml  silkcircuit_neon.toml  silkcircuit_soft.toml  silkcircuit_vibrant.toml  solarized_light.toml  tokyo_night.toml
src/theme/tests/: builtins_tests.rs  mod.rs  theme_tests.rs
src/tui/: app.rs  input_handler.rs  mod.rs  spinner.rs  state.rs  ui.rs
src/types/: changelog.rs  commit.rs  mod.rs  pr.rs  release_notes.rs  review.rs
tests/: agent_tests.rs  basic_git_operations_tests.rs  branch_comparisons_tests.rs  changelog_integration_tests.rs  changelog_prompts_tests.rs  changelog_tests.rs  config_tests.rs  file_analyzers_tests.rs  file_exclusions_tests.rs  git_hooks_tests.rs  git_tests.rs  gitmoji_tests.rs  lib.rs  llm_tests.rs  mcp_tests.rs  pr_tests.rs  project_metadata_tests.rs  prompt_tests.rs  remote_git_repositories_tests.rs  remote_repository_integration_tests.rs  review_tests.rs  service_tests.rs  test_utils.rs  token_optimization_integration_tests.rs  token_optimizer_tests.rs
